@@ -55,6 +55,8 @@ New config options:
 	XKore_publicIp
 	XKore_listenIp
 	XKore_listenPort
+- clientSight
+- removeActorWithDistance
 
 Internal:
 - Implemented the beginning of a localization framework.
